# BitGuard

./: .gitignore  README.md  RESEARCH_MAPPING.md  VALIDATION.md  bootstrap.ps1  bootstrap.sh  pyproject.toml  requirements.txt
configs/: botiot.yaml  botiot_attack.yaml  common_stream_full.yaml  demo.yaml  demo_logreg.yaml  nbaiot.yaml  nbaiot_attack.yaml
configs/full/: botiot.yaml  nbaiot.yaml
requirements/locks/: full-base.txt  torch-cu118.txt  torch-cu124.txt  torch-cu128.txt
scripts/: bootstrap.py  run_experiment_matrix.py  run_feature_ablation.py
src/bitguard_bnn/: __init__.py  cascade.py  cli.py  config.py  constants.py  data.py  demo.py  export.py  losses.py  metrics.py  models.py  preprocess.py  (+3 more)
tests/: test_binary_layers.py  test_bootstrap_cli.py  test_bootstrap_download.py  test_bootstrap_entry.py  test_bootstrap_extract.py  test_bootstrap_fsops.py  test_bootstrap_inspect.py  test_bootstrap_integration.py  test_bootstrap_preflight.py  test_bootstrap_state.py  test_config_and_metrics.py  test_data_and_preprocess.py  test_experiment_matrix.py  test_full_bootstrap_recovery.py  test_gate_export.py  test_out_of_core_cache.py  test_out_of_core_calibration.py  test_out_of_core_dataset.py  test_out_of_core_metrics.py  test_out_of_core_prepare.py  test_out_of_core_preprocess.py  test_out_of_core_quantiles.py  test_out_of_core_run.py  test_out_of_core_shard.py  test_out_of_core_source.py  test_out_of_core_split.py  test_out_of_core_training.py  test_state_streaming_cascade.py  test_streaming_incremental.py  test_training_integration.py  test_training_runtime.py
(+39 files in other folders)
