[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitguard-bnn"
version = "0.1.0"
description = "Training and offline evaluation code for the BitGuard-BNN IoT security research plan"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "joblib>=1.3",
  "torch>=2.2",
]

[project.optional-dependencies]
full = ["pyarrow==19.0.1"]
plots = ["matplotlib>=3.7", "seaborn>=0.13"]
xgboost = ["xgboost>=2.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
bitguard = "bitguard_bnn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

